--- a/404.html
+++ b/404.html
@@ -16,7 +16,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
  
+  <h1>Himagiri Nurseries will be back soon...</h1>
 
-</body>
+  </body>
 
 </html>
