Intial HN design

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               <li><a href="#about">About</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#pricing">Pricing</a></li>
+<!--              <li><a href="#pricing">Pricing</a></li>-->
               <li><a href="#contact">Contact</a></li>
-              <li><a href="#admin">Admin</a></li>
+              <li><a href="404.html">Admin</a></li>
 
 
             </ul>
@@ -124,50 +124,53 @@ From concept to delivery, our promise is to communicate with you at every stage 
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 ">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Commercial Landscaping</a></h4>
+              <h4><a href="404.html">Landscaping</a></h4>
               <p></p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+<!--          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">-->
+          <div class="col-lg-4 col-md-6 ">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Paving</a></h4>
+              <h4><a href="404.html">Paving</a></h4>
               <p></p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Irrigation</a></h4>
+              <h4><a href="404.html">Irrigation</a></h4>
               <p></p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+<!--
+          <div class="col-lg-4 col-md-6 d-flex">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4><a href="">Soft Landscaping</a></h4>
               <p></p>
             </div>
           </div>
+-->
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Maintenance</a></h4>
+              <h4><a href="404.html">Garden Set-up</a></h4>
               <p></p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Hoome Garden Set-up & Maintenance</a></h4>
+              <h4><a href="404.html">Garden Maintenance</a></h4>
               <p></p>
             </div>
           </div>
@@ -184,10 +187,10 @@ From concept to delivery, our promise is to communicate with you at every stage 
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3>Call To Action</h3>
-            <p> Feel free to talk to our online representative at any time you please using our Live Chat system on our website or one of the below instant messaging programs.</p>
+            <p> Feel free to contact us on our mobile number or our business email.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="#contact">Call To Action</a>
           </div>
         </div>
 
@@ -195,6 +198,7 @@ From concept to delivery, our promise is to communicate with you at every stage 
     </section><!-- End Cta Section -->
 
     <!-- ======= Features Section ======= -->
+<!--
     <section id="features" class="features">
       <div class="container">
 
@@ -225,9 +229,12 @@ From concept to delivery, our promise is to communicate with you at every stage 
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section>
+-->
+    <!-- End Features Section -->
 
     <!-- ======= Clients Section ======= -->
+<!--
     <section id="clients" class="clients">
       <div class="container">
 
@@ -284,9 +291,12 @@ From concept to delivery, our promise is to communicate with you at every stage 
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section>
+-->
+    <!-- End Clients Section -->
 
     <!-- ======= Counts Section ======= -->
+<!--
     <section id="counts" class="counts">
       <div class="container">
 
@@ -320,7 +330,9 @@ From concept to delivery, our promise is to communicate with you at every stage 
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section>
+-->
+    <!-- End Counts Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -328,7 +340,7 @@ From concept to delivery, our promise is to communicate with you at every stage 
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Summary of the HN bussiness.</p>
+          <p></p>
         </div>
 
         <div class="row">
@@ -337,109 +349,112 @@ From concept to delivery, our promise is to communicate with you at every stage 
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Project 1</li>
               <li data-filter=".filter-card">Project  2</li>
-              <li data-filter=".filter-web">Project 2</li>
+              <li data-filter=".filter-web">Project 3</li>
             </ul>
           </div>
         </div>
 
+
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 1</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 1"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 3</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 3"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 1</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 1"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 2</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 2</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 2"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 3</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Project 2"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 1</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 1"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 1</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 2</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 1"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 3</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 2</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 3"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+            <img src="assets/img/HN.PNG" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Project 3</h4>
+              <p>Project</p>
+              <a href="assets/img/HN.PNG" data-gall="portfolioGallery" class="venobox preview-link" title="Project 3"><i class="bx bx-plus"></i></a>
+              <a href="404.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
         </div>
+
 
       </div>
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
+<!--
     <section id="pricing" class="pricing">
       <div class="container">
 
@@ -448,7 +463,7 @@ From concept to delivery, our promise is to communicate with you at every stage 
           <p>Oline carting detials....</p>
         </div>
 
-       <!-- <div class="row">
+        <div class="row">
 
           <div class="col-lg-4 col-md-6">
             <div class="box">
@@ -502,12 +517,15 @@ From concept to delivery, our promise is to communicate with you at every stage 
             </div>
           </div>
 
-        </div> -->
+        </div>
 
       </div>
-    </section><!-- End Pricing Section -->
+    </section>
+-->
+    <!-- End Pricing Section -->
 
     <!-- ======= Faq Section ======= -->
+<!--
     <section id="faq" class="faq">
       <div class="container-fluid">
 
@@ -559,7 +577,9 @@ From concept to delivery, our promise is to communicate with you at every stage 
         </div>
 
       </div>
-    </section><!-- End Faq Section -->
+    </section>
+-->
+    <!-- End Faq Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -567,13 +587,13 @@ From concept to delivery, our promise is to communicate with you at every stage 
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Contract details goes here.</p>
+<!--          <p>Contract details goes here.</p>-->
         </div>
       </div>
 
-      <div>
+      <!--<div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15270.353643846809!2d81.79235887856694!3d16.896243063993747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a37bc8d0423820d%3A0x6e7d7da338cef696!2sBurrilanka%2C%20Andhra%20Pradesh%20533125!5e0!3m2!1sen!2sin!4v1599405168929!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" allowfullscreen></iframe> 
-      </div>
+      </div> -->
 
       <div class="container">
 
@@ -584,13 +604,15 @@ From concept to delivery, our promise is to communicate with you at every stage 
               <div class="address">
                 <i class="ri-map-pin-line"></i>
                 <h4>Location:</h4>
-                <p>Burrilanka, East Godavari Dist, Andhra Pradesh, 533125</p>
+                <p> # 18-215/9, Agraharam street, Dowlaiswaram - 533 125</p>
+                <h4>Registered Office : </h4>
+                <p>#447/2, Near NH-5, Burrilanka, East Godavari Dist, Andhra Pradesh, 533125</p>
               </div>
 
               <div class="email">
                 <i class="ri-mail-line"></i>
                 <h4>Email:</h4>
-                <p>contactus@himagirinurseries.com</p>
+                <p>himagirinurseries@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -603,7 +625,7 @@ From concept to delivery, our promise is to communicate with you at every stage 
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+        <!--  <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
@@ -632,7 +654,7 @@ From concept to delivery, our promise is to communicate with you at every stage 
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-          </div>
+          </div> -->
 
         </div>
 
@@ -650,7 +672,6 @@ From concept to delivery, our promise is to communicate with you at every stage 
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
