Update Profile - About us

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Himagiri Nurseries</title>
+    <title>Himagiri Nurseries - Home</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -36,7 +36,7 @@
     <div class="container-fluid">
 
       <div class="row justify-content-center">
-        <div class="col-xl-9 d-flex align-items-center justify-content-between">
+        <div class="col-xl-12 d-flex align-items-center justify-content-between">
             <h1 class="logo"><a href="index.html"><p style="color:#00cc81">Himagiri Nurseries</p></a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -44,7 +44,7 @@
           <nav class="nav-menu d-none d-lg-block">
             <ul>
               <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="#about">About</a></li>
+              <li><a href="#about">About Us</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
 <!--              <li><a href="#pricing">Pricing</a></li>-->
@@ -80,35 +80,23 @@
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
         <div class="section-title">
           <h2>About Us</h2>
-          <p>Himagiri Nurseries provides Gardening and Landscaping services with maintenance at Hyderabad. Our aim is to improve everyone’s workplace and living environments. We plan to work with small and large scale businesses across industries, including the educational centers, hospitals, hotels, offices, restaurants, malls and retail outlets.</p>
-        </div>
-
-        <!--<div class="row content">
-          <div class="col-lg-6">
+          <p>Himagiri Nursery is a registered firm established in the year 2002 at Burrilanka, Kadiyam mandal, East Godavari District, Andhra Pradesh, India with a sole motto of development in the horticulture sector.</p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+                <br>
             </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            </ul>
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+                The company’s endeavor is to reap the huge horticulture potential in the nursery, gardening & landscaping sectors. The firm was established under the innovative management of our proprietor Mr. Ravi Danduboina, and the Company has ever since been scaling new heights in its business endeavor.
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
-          </div>
-        </div>-->
-
+      <div class="row content">
+          <p><br></p>
       </div>
+
+      <div class="row content">
+            <a href="AboutUs.html#about" class="btn-learn-more">Learn More</a>
+      </div>
+
     </section><!-- End About Us Section -->
 
     <!-- ======= Services Section ======= -->
@@ -117,10 +105,11 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>We bring your ideas for outdoors to life. With precision and focus on detail, the team always delivers space which exceed client expectations. Whether it be a public park, commercial area or a community project, we create space for people. Taking into account the location, purpose and budget, we plan every detail and investigate all possibilities.</P>
+          <p>
+              We bring your ideas for outdoors to life. With precision and focus on detail, the team always delivers space which exceed client expectations. Whether it be a public park, commercial area or a community project, we create space for people. Taking into account the location, purpose and budget, we plan every detail and investigate all possibilities.</P>
           <br>
-<p>
-From concept to delivery, our promise is to communicate with you at every stage and offer advice based on bringing you the best result. Not only will you be working with our experienced team but you will have a partner with people who understand all things landscape construction.</p>
+          <p>
+              From concept to delivery, our promise is to communicate with you at every stage and offer advice based on bringing you the best result. Not only will you be working with our experienced team but you will have a partner with people who understand all things landscape construction.</p>
         </div>
 
         <div class="row">
