--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
       <div class="row justify-content-center">
         <div class="col-xl-12 d-flex align-items-center justify-content-between">
-            <h1 class="logo"><a href="index.html"><p style="color:#00cc81">Himagiri Nurseries</p></a></h1>
+            <h1 class="logo"><a href="index.html"><p style="color:#00cc81"><strong>H</strong>imagiri <strong>N</strong>urseries</p></a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+<!--           <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
           <nav class="nav-menu d-none d-lg-block">
             <ul>
@@ -50,15 +50,11 @@
 <!--              <li><a href="#pricing">Pricing</a></li>-->
               <li><a href="#contact">Contact</a></li>
               <li><a href="404.html">Admin</a></li>
-
-
             </ul>
           </nav><!-- .nav-menu -->
-
           <!--<a href="#about" class="get-started-btn scrollto">Get Started</a>-->
         </div>
       </div>
-
     </div>
   </header><!-- End Header -->
 
@@ -577,17 +573,10 @@
         <div class="section-title">
           <h2>Contact</h2>
 <!--          <p>Contract details goes here.</p>-->
-        </div>
-      </div>
-
       <!--<div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15270.353643846809!2d81.79235887856694!3d16.896243063993747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a37bc8d0423820d%3A0x6e7d7da338cef696!2sBurrilanka%2C%20Andhra%20Pradesh%20533125!5e0!3m2!1sen!2sin!4v1599405168929!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" allowfullscreen></iframe> 
       </div> -->
-
-      <div class="container">
-
         <div class="row mt-5">
-
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
@@ -648,6 +637,8 @@
         </div>
 
       </div>
+                  </div>
+
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
