Professional email id added

--- a/index.html
+++ b/index.html
@@ -590,7 +590,8 @@
               <div class="email">
                 <i class="ri-mail-line"></i>
                 <h4>Email:</h4>
-                <p>himagirinurseries@gmail.com</p>
+                  <p><a href="mailto:info@himagirinurseries.in">info@himagirinurseries.in</a></p>
+                  <p><a href="mailto:himagirinurseries@gmail.com">himagirinurseries@gmail.com</a></p>
               </div>
 
               <div class="phone">
