--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <br>
             </p>
             <p>
-                The company’s endeavor is to reap the huge horticulture potential in the nursery, gardening & landscaping sectors. The firm was established under the innovative management of our proprietor Mr. Ravi Danduboina, and the Company has ever since been scaling new heights in its business endeavor.
+                The company’s endeavor is to reap the huge horticulture potential in the nursery, gardening & landscaping sectors. The firm was established under the innovative management of our proprietor Mr. Ravi Danduboyina, and the Company has ever since been scaling new heights in its business endeavor.
             </p>
       <div class="row content">
           <p><br></p>
