--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Himagiri Nurseries - Home</title>
+    <title>Himagiri Nurseries - Horticulture and Landscaping experts</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -47,9 +47,10 @@
               <li><a href="#about">About Us</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#gallery">Gallery</a></li>
 <!--              <li><a href="#pricing">Pricing</a></li>-->
               <li><a href="#contact">Contact</a></li>
-              <li><a href="404.html">Admin</a></li>
+<!--              <li><a href="404.html">Admin</a></li>-->
             </ul>
           </nav><!-- .nav-menu -->
           <!--<a href="#about" class="get-started-btn scrollto">Get Started</a>-->
@@ -566,6 +567,39 @@
 -->
     <!-- End Faq Section -->
 
+
+
+            <!-- ======= Gallery Section ======= -->
+    <section id="gallery" class="gallery">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Gallery</h2>
+          <p>Few images from our Nursery</p>
+        </div>
+
+        <div class="owl-carousel gallery-carousel" data-aos="fade-up" data-aos-delay="100">
+          <a href="assets/img/gallery/1.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/1.jpeg" alt=""></a>
+          <a href="assets/img/gallery/2.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/2.jpeg" alt=""></a>
+          <a href="assets/img/gallery/3.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/3.jpeg" alt=""></a>
+          <a href="assets/img/gallery/4.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/4.jpeg" alt=""></a>
+          <a href="assets/img/gallery/5.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/5.jpeg" alt=""></a>
+          <a href="assets/img/gallery/6.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/6.jpeg" alt=""></a>
+          <a href="assets/img/gallery/7.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/7.jpeg" alt=""></a>
+          <a href="assets/img/gallery/8.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/8.jpeg" alt=""></a>
+          <a href="assets/img/gallery/9.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/9.jpeg" alt=""></a>
+          <a href="assets/img/gallery/10.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/10.jpeg" alt=""></a>
+          <a href="assets/img/gallery/11.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/11.jpeg" alt=""></a>
+          <a href="assets/img/gallery/12.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/12.jpeg" alt=""></a>
+          <a href="assets/img/gallery/13.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/13.jpeg" alt=""></a>
+          <a href="assets/img/gallery/14.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/14.jpeg" alt=""></a><a href="assets/img/gallery/15.jpeg" class="venobox" data-gall="gallery-carousel"><img src="assets/img/gallery/15.jpeg" alt=""></a>
+        </div>
+
+      </div>
+    </section><!-- End Gallery Section -->
+
+
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -573,18 +607,16 @@
         <div class="section-title">
           <h2>Contact</h2>
 <!--          <p>Contract details goes here.</p>-->
-      <!--<div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15270.353643846809!2d81.79235887856694!3d16.896243063993747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a37bc8d0423820d%3A0x6e7d7da338cef696!2sBurrilanka%2C%20Andhra%20Pradesh%20533125!5e0!3m2!1sen!2sin!4v1599405168929!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" allowfullscreen></iframe> 
-      </div> -->
         <div class="row mt-5">
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
                 <i class="ri-map-pin-line"></i>
-                <h4>Location:</h4>
-                <p> # 18-215/9, Agraharam street, Dowlaiswaram - 533 125</p>
-                <h4>Registered Office : </h4>
-                <p>#447/2, Near NH-5, Burrilanka, East Godavari Dist, Andhra Pradesh, 533125</p>
+                <h4>Registered Office:</h4>
+                <p># 18-215/9, Agraharam street, Dowlaiswaram - 533 125</p>
+                  <p><br></p>
+                <h4>Farm : </h4>
+                <p>#448/2C, Near NH-5, Burrilanka, Kadiyam Mandalam, East Godavari Dist, Andhra Pradesh, 533125</p>
               </div>
 
               <div class="email">
@@ -604,8 +636,9 @@
 
           </div>
 
-        <!--  <div class="col-lg-8 mt-5 mt-lg-0">
+          <div class="col-lg-8 mt-5 mt-lg-0">
 
+<!--
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col-md-6 form-group">
@@ -632,13 +665,17 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
+-->
+      <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15270.167042903744!2d81.7955455!3d16.8985479!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcd957271c79ca060!2sHimagiri%20Nurseries%20-%20HimagiriNurseries!5e0!3m2!1sen!2sin!4v1610710684091!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
 
-          </div> -->
+          </div>
 
         </div>
 
       </div>
-                  </div>
+    </div>
 
     </section><!-- End Contact Section -->
 
