--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link rel="icon" href="assets/img/hn-fav.png" type="image/x-icon" />
+  <!--<link rel="icon" href="assets/img/hn-fav.png" type="image/x-icon" />-->
   <link rel="apple-touch-icon" type="image/x-icon"  href="assets/img/hn-fav1.png?">
 
   <!-- Google Fonts -->
